@@ -50,9 +50,6 @@ printed to standard output, now it is.
 .TP
 .B \-F FORMAT
 Specify a printf-style format to use. See \fBFORMAT\fR below.
-.B \-c
-Concatenate the file's contents also to standard output. This is usefull
-when doing a remote backup (where you need to actual contents).
 .TP
 .B \-N timestamp
 use the m_time of file TIMESTAMP as the timestamp to decide what to
@@ -61,12 +58,12 @@ of full dump is performed.
 .B rdup
 will create TIMESTAMP before it starts printing the file list.
 .TP
+.B \-V
+Print rdup's version.
+.TP
 .B \-v
 Be more verbose. If specified another time, \fBrdup\fR will be even
 more verbose.
-.TP
-.B \-V
-Print rdup's version.
 .TP
 .B \-x
 Stay on the local filesystem.
@@ -78,21 +75,27 @@ This option \fIonly\fR applies to files and symbolic links, \fInot\fR
 to directories.
 .TP
 .B \-0
-Delimit all printed/read/written lists with NULL instead of a
-whitespace.
+Delimit FILELIST with NULL's instead of a newline. Use '\\0' in the
+FORMAT string to change \fBrdup\fR's output.
 
 .SH FORMAT
-      'p': '+' if file is new/modified, '-' if removed
-                'm': mode from lstat
-                'u': uid of owner
-                'g': gid of owner
-                'l': length of name
-                's': size of file (zero if directory)
-                'n': absolute path of file
-                't': time of modification (in seconds from epoch!)
-                'T': 'type' - same chars as 'ls -l'
+The default format \fBrdup\fR uses is: "%p%m %u %g %l %s %n\\n"
+.PP
+The following escape sequences are understood by \fBrdup\fR:
 
-
+        'p': '+' if file is new/modified, '-' if removed
+        'm': mode from lstat(2)
+        'u': uid of the owner
+        'g': gid of the owner
+        'l': length of name
+        's': size of file/link (zero if directory)
+        'n': absolute path 
+        't': time of modification (in seconds from epoch)
+        'T': 'type' - same chars as 'ls -l'
+        'C': the content of the file/link (none for directories)
+.PP
+To delimit the outout of \fBrdup\fR with NULLs you can use '\\0' in the 
+format string.
 
 .SH FILELIST
 \fBrdup\fR write the FILELIST in the following format:
@@ -103,7 +106,7 @@ typical example is:
         33216 bin/rdup
 
 .SH OUTPUT FORMAT 
-The output generated by \fBrdup\fR is formatted like:
+The default output generated by \fBrdup\fR is formatted like:
         +|-MODE UID GID PATH_SIZE FILE_SIZE PATH
 .PP
 Where:
